report labels [NEW] deleted
Former-commit-id: c8082c117e5fd775a1892cf0138e413fe5851887

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -963,9 +963,9 @@ QAWSPage = QA Bereich
 #
 ReportWorkspacePage = T\u00E4tigkeitsbericht
 
-ReportWorkspace_btnGenereateList = [NEW] Liste erstellen
+ReportWorkspace_btnGenereateList = Liste erstellen
 
-ReportWorkspace_year = [NEW]Jahr
+ReportWorkspace_year = Jahr
 
 #
 #ReviseItem
