--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -939,9 +939,9 @@ QAWSPage = \u7BA1\u7406\u753B\u9762
 
 ReportWorkspacePage = Report Workspace
 
-ReportWorkspace_btnGenereateList = [NEW] Generate list
+ReportWorkspace_btnGenereateList = Generate list
 
-ReportWorkspace_year = [NEW]Year
+ReportWorkspace_year = Year
 
 #
 #ReviseItem
