--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -29,6 +29,8 @@ AffiliationDetailPage_detailsNotRetrieved = Die Details k\u00F6nnen momentan lei
 
 Affiliations_reloaded = ... Organisationsbaum wurde neu geladen.
 
+ArticleSourceNotProvided = Wenn das Genre "Zeitschriftenartikel" gew\u00E4hlt ist, muss die Quelle eine "Zeitschrift" sein.
+
 AuthorNotProvided = Es muss mindestens ein Urheber vom Typ "Autor" eingegeben werden.
 
 ComponentContentCategoryNotProvided = Bei einer angeh\u00E4ngten Datei fehlt die Spezifizierung des Inhalts (z.B. Abstract, Pre-print, usw.).
@@ -48,6 +50,16 @@ ComponentRequired = Bitte laden Sie mindestens eine Datei hoch oder geben Sie ei
 ComponentVisibilityNotProvided = Bei einer angeh\u00E4ngten Datei fehlt die Bestimmung der Zugangsbeschr\u00E4nkung der Datei.
 
 ConfirmRollbackItemVersion = Wollen Sie die aktuelle Version mit dieser Version ersetzen?
+
+ContributionCollEditionSourceNotProvided = Wenn das Genre "Beitrag in Sammelwerk" gew\u00E4hlt ist, muss die Quelle ein "Sammelwerk" sein.
+
+ContributionCommentarySourceNotProvided = Wenn das Genre "Beitrag in Kommentar" gew\u00E4hlt ist, muss die Quelle ein "Kommentar" sein.
+
+ContributionEncyclopediaSourceNotProvided = Wenn das Genre "Beitrag in Lexikon" gew\u00E4hlt ist, muss die Quelle ein "Lexikon" sein.
+
+ContributionFestschriftSourceNotProvided = Wenn das Genre "Beitrag in Festschrift" gew\u00E4hlt ist, muss die Quelle eine "Festschrift" sein.
+
+ContributionHandbookSourceNotProvided = Wenn das Genre "Beitrag in Handbuch" gew\u00E4hlt ist, muss die Quelle ein "Handbuch" sein.
 
 CreatorFamilyNameNotProvided = Der Nachname des Urhebers muss noch angegeben werden.
 
@@ -120,6 +132,8 @@ MimeTypeNotValid = Der angegebene Mime Type ist ung\u00FCltig.
 
 MpdlCreatorRequired = Mindestens ein Autor muss entweder die MPDL selbst oder jemand aus der MPDL sein.
 
+NewspaperArticleSourceNotProvided = Wenn das Genre "Zeitungsartikel" gew\u00E4hlt ist, muss die Quelle eine "Zeitung" sein.
+
 NoConeJournal = Journal nicht in CONE. 
 
 NoMaxPlanckAffiliation = Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
@@ -153,11 +167,11 @@ PublishingDateNotProvided = Es muss ein Erscheinungsdatum angegeben werden.
 #
 # ReportWorkspace
 #
-ReportNoItemsFound = [NEW] Keine Publikationen f\u00FCr das eingegebene Insitut und Jahr vorhanden
+ReportNoItemsFound = Keine Publikationen f\u00FCr das eingegebene Insitut und Jahr vorhanden
 
-ReportOrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
+ReportOrgIdNotProvided = Bitte geben Sie eine Organisation ein
 
-ReportYearNotProvided = [NEW] Bitte geben Sie ein Jahr ein
+ReportYearNotProvided = Bitte geben Sie ein Jahr ein
 
 ReviewMethodInternalNotProvided = Es muss eine interne Begutachtung spezifiziert werden.
 
