--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -32,6 +32,8 @@ AffiliationDetailPage_detailsNotRetrieved = The details cannot be displayed righ
 
 Affiliations_reloaded = ... affiliation tree was reloaded.
 
+ArticleSourceNotProvided = If genre is equal to "Journal Article" the source has to be "Journal".
+
 AuthorNotProvided = A creator of type author has to be provided.
 
 ComponentContentCategoryNotProvided = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.).
@@ -51,6 +53,16 @@ ComponentRequired = Please either upload at least one file or enter a locator.
 ComponentVisibilityNotProvided = An attached file is missing the specification of the file visibility.
 
 ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
+
+ContributionCollEditionSourceNotProvided = If genre is equal to "Contribution to Collected Edition" the source has to be "Collected Edition".
+
+ContributionCommentarySourceNotProvided = If genre is equal to "Contribution to Commentary" the source has to be "Commentary".
+
+ContributionEncyclopediaSourceNotProvided = If genre is equal to "Contribution to Encyclopedia" the source has to be "Encyclopedia".
+
+ContributionFestschriftSourceNotProvided = If genre is equal to "Contribution to Festschrift" the source has to be "Festschrift".
+
+ContributionHandbookSourceNotProvided = If genre is equal to "Contribution to Handbook" the source has to be "Handbook".
 
 CreatorFamilyNameNotProvided = A creator's family name is not provided.
 
@@ -126,6 +138,8 @@ MimeTypeNotValid = The given mime type is not valid.
 
 MpdlCreatorRequired = At least one author has to be the MPDL or affiliated to it.
 
+NewspaperArticleSourceNotProvided = If genre is equal to "Newspaper Article" the source has to be "Newspaper".
+
 NoConeJournal = No CONE Journal. 
 
 NoMaxPlanckAffiliation = At least one creator must have an affiliation within the Max Planck Society
@@ -159,11 +173,11 @@ PublishingDateNotProvided = At least one publishing date must be provided
 #
 # ReportWorkspace
 #
-ReportNoItemsFound = [NEW] No publications found for the given institute and year.
+ReportNoItemsFound = No publications found for the given institute and year.
 
-ReportOrgIdNotProvided = [NEW] Please provide an organization for the report.
+ReportOrgIdNotProvided = Please provide an organization for the report.
 
-ReportYearNotProvided = [NEW] Please provide an year for the report
+ReportYearNotProvided = Please provide an year for the report
 
 ReviewMethodInternalNotProvided = The Review Method has to have the value "internal".
 
