--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -32,6 +32,8 @@ AffiliationDetailPage_detailsNotRetrieved = \u7D44\u7E54\u60C5\u5831\u306E\u8A73
 
 Affiliations_reloaded = ... \u7D44\u7E54\u56F3\u60C5\u5831\u3092\u518D\u8AAD\u307F\u8FBC\u307F\u3057\u307E\u3057\u305F\u3002
 
+ArticleSourceNotProvided = If genre is equal to "Journal Article" the source has to be "Journal".
+
 AuthorNotProvided = \u8457\u8005\u306E\u7A2E\u5225\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 ComponentContentCategoryNotProvided = \u767B\u9332\u30D5\u30A1\u30A4\u30EB\u306E\u5185\u5BB9\u7A2E\u5225\uFF08\u8981\u65E8\u3001\u30D7\u30EC\u30D7\u30EA\u30F3\u30C8\u306A\u3069\uFF09\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
@@ -51,6 +53,16 @@ ComponentRequired = Please either upload at least one file or enter a locator.
 ComponentVisibilityNotProvided = An attached file is missing the specification of the file visibility.
 
 ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
+
+ContributionCollEditionSourceNotProvided = If genre is equal to "Contribution to Collected Edition" the source has to be "Collected Edition".
+
+ContributionCommentarySourceNotProvided = If genre is equal to "Contribution to Commentary" the source has to be "Commentary".
+
+ContributionEncyclopediaSourceNotProvided = If genre is equal to "Contribution to Encyclopedia" the source has to be "Encyclopedia".
+
+ContributionFestschriftSourceNotProvided = If genre is equal to "Contribution to Festschrift" the source has to be "Festschrift".
+
+ContributionHandbookSourceNotProvided = If genre is equal to "Contribution to Handbook" the source has to be "Handbook".
 
 CreatorFamilyNameNotProvided = \u4F5C\u8005\u60C5\u5831\u306E\u3046\u3061\u59D3\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
@@ -123,6 +135,8 @@ MimeTypeNotValid = \u6307\u5B9A\u3057\u305FMIME\u30BF\u30A4\u30D7\u306F\u8A31\u5
 
 MpdlCreatorRequired = \u5C11\u306A\u304F\u3068\u3082\u8457\u8005\u306E\u3046\u30611\u540D\u306FMPDL\u306E\u6240\u5C5E\u3068\u306A\u3063\u3066\u3044\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
+NewspaperArticleSourceNotProvided = If genre is equal to "Newspaper Article" the source has to be "Newspaper".
+
 NoConeJournal = No CONE Journal. 
 
 NoMaxPlanckAffiliation = At least one creator must have an affiliation within the Max Planck Society
@@ -153,14 +167,14 @@ PublishingDateNotCorrect2 = Every publishing date should have the year of the ye
 
 PublishingDateNotProvided = At least one publishing date must be provided
 
-ReportNoItemsFound = [NEW] No publications found for the given institute and year.
+ReportNoItemsFound = No publications found for the given institute and year.
 
 #
 # ReportWorkspace
 #
-ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
+ReportOrgIdNotProvided = Please provide an organization for the report
 
-ReportYearNotProvided = [NEW] Please provide an year for the report
+ReportYearNotProvided = Please provide an year for the report
 
 ReviewMethodInternalNotProvided = \u67FB\u8AAD\u7A2E\u5225\u3092\u300C\u5185\u90E8\u5BE9\u67FB\u300D\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
