--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -962,9 +962,9 @@ QAWSPage = QA Workspace
 #
 ReportWorkspacePage = Report Workspace
 
-ReportWorkspace_btnGenereateList = [NEW] Generate list
+ReportWorkspace_btnGenereateList = Generate list
 
-ReportWorkspace_year = [NEW]Year
+ReportWorkspace_year = Year
 
 #
 #ReviseItem
