--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -32,6 +32,8 @@ AffiliationDetailPage_detailsNotRetrieved = Los detalles no pueden ser mostrados
 
 Affiliations_reloaded = ... el \u00E1rbol de afiliaci\u00F3n se ha recargado.
 
+ArticleSourceNotProvided = If genre is equal to "Journal Article" the source has to be "Journal".
+
 AuthorNotProvided = Tiene que proporcionar un creador en el tipo de autor.
 
 ComponentContentCategoryNotProvided = Falta definir un tipo de contenido para el fichero adjuntado (ej. Resumen, Pre-print, etc.)
@@ -49,6 +51,16 @@ ComponentMimeTypeNotProvided = El fichero adjuntado no tiene tipo mime.
 ComponentRequired = Por favor, cargue al menos un fichero o introduzca un localizador.
 
 ComponentVisibilityNotProvided = Falta la especificaci\u00F3n de la visibilidad del fichero adjuntado.
+
+ContributionCollEditionSourceNotProvided = If genre is equal to "Contribution to Collected Edition" the source has to be "Collected Edition".
+
+ContributionCommentarySourceNotProvided = If genre is equal to "Contribution to Commentary" the source has to be "Commentary".
+
+ContributionEncyclopediaSourceNotProvided = If genre is equal to "Contribution to Encyclopedia" the source has to be "Encyclopedia".
+
+ContributionFestschriftSourceNotProvided = If genre is equal to "Contribution to Festschrift" the source has to be "Festschrift".
+
+ContributionHandbookSourceNotProvided = If genre is equal to "Contribution to Handbook" the source has to be "Handbook".
 
 CreatorFamilyNameNotProvided = No se ha proporcionado el apellido del creador.
 
@@ -103,6 +115,8 @@ MimeTypeNotValid = El tipo mime introducido no es v\u00E1lido.
 
 MpdlCreatorRequired = Al menos un autor debe pertenecer a la EOI o estar afiliado.
 
+NewspaperArticleSourceNotProvided = If genre is equal to "Newspaper Article" the source has to be "Newspaper".
+
 NoDDCKeyword = La palabra clave introducida no es conforme con la clasificaci\u00F3n DDC.
 
 NoMaxPlanckAffiliation = At least one creator must have an affiliation within the Max Planck Society
@@ -134,11 +148,11 @@ PublishingDateNotProvided = At least one publishing date must be provided
 #
 # ReportWorkspace
 #
-ReportNoItemsFound = [NEW] No publications found for the given institute and year
+ReportNoItemsFound = No publications found for the given institute and year
 
-ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
+ReportOrgIdNotProvided = Please provide an organization for the report
 
-ReportYearNotProvided = [NEW] Please provide an year for the report
+ReportYearNotProvided = Please provide an year for the report
 
 ReviewMethodInternalNotProvided = El M\u00E9todo de Revisi\u00F3n tiene que tener el valor "interno".
 
