JUS Validation Rules Message added
Former-commit-id: 774c13b51f2976e338ed1baae58020175ca7839a

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -105,6 +105,8 @@ EventTitleNotProvided = Wenn Angaben zu einer Veranstaltung/Konferenz gemacht we
 
 EventTitleRequired = Der Name der Veranstaltung muss angegeben werden.
 
+FullDateNotProvided = Das volle Datum im Format YYYY-MM-DD muss eingegeben werden.
+
 GenreNotProvided = Bitte geben Sie das Genre an.
 
 GenreNotSuitable = Das ausgew\u00E4hle Genre ist f\u00FCr die gew\u00E4hlte Collection nicht zul\u00E4ssig.
