--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -108,6 +108,8 @@ EventTitleNotProvided = If event data are entered, an event title has to be give
 
 EventTitleRequired = The event title must be provided
 
+FullDateNotProvided = The full date in format YYYY-MM-DD  must be provided.
+
 GenreNotProvided = Please specify the Genre.
 
 GenreNotSuitable = The selected genre is not allowed in the actual collection.
