--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -96,6 +96,8 @@ EventTitleNotProvided = Si se introducen fechas de evento, es necesario introduc
 
 EventTitleRequired = The event title must be provided
 
+FullDateNotProvided = The full date in format YYYY-MM-DD  must be provided.
+
 GenreNotProvided = Por favor, especifique el G\u00E9nero.
 
 GenreNotSuitable = El g\u00E9nero seleccionado no est\u00E1 permitido en la actual colecci\u00F3n.
