--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -108,6 +108,8 @@ EventTitleNotProvided = \u30A4\u30D9\u30F3\u30C8\u60C5\u5831\u304C\u5165\u529B\u
 
 EventTitleRequired = The event title must be provided
 
+FullDateNotProvided = The full date in format YYYY-MM-DD  must be provided.
+
 GenreNotProvided = \u7A2E\u5225\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 GenreNotSuitable = \u9078\u629E\u4E2D\u306E\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3067\u306F\u6307\u5B9A\u3057\u305F\u8CC7\u6599\u7A2E\u5225\u306E\u767B\u9332\u306F\u8A31\u53EF\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
