Former-commit-id: e3410413ac05290a81f7ce979b98703e026b1b23

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -108,7 +108,7 @@ EventTitleNotProvided = If event data are entered, an event title has to be give
 
 EventTitleRequired = The event title must be provided
 
-FullDateNotProvided = The full date in format YYYY-MM-DD  must be provided.
+FullDateNotProvided = The full date in format YYYY-MM-DD has to be provided.
 
 GenreNotProvided = Please specify the Genre.
 
