New validation message
Former-commit-id: 326b9bdd22e34bf1115990a5bb26bcc79b650dc0

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -166,6 +166,8 @@ PublishingDateNotCorrect2 = Jedes Erscheinungsdatum sollte das Jahr des Jahrbuch
 
 PublishingDateNotProvided = Es muss ein Erscheinungsdatum angegeben werden.
 
+SourceGenreMustBeProceedings = Das Genre der Quelle muss "Konferenzband" sein.
+
 #
 # ReportWorkspace
 #
