--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -162,15 +162,17 @@ PublisherNameNotProvided = Publishing information was entered without a publishe
 
 PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
-PublisherNotProvided = Publisher must be provided
+PublisherNotProvided = Publisher must be provided.
 
-PublisherPlaceNotProvided = Publishing place must be provided
+PublisherPlaceNotProvided = Publishing place must be provided.
 
-PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook
+PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook.
 
-PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook
+PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
-PublishingDateNotProvided = At least one publishing date must be provided
+PublishingDateNotProvided = At least one publishing date must be provided.
+
+SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
 #
 # ReportWorkspace
