--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -137,15 +137,17 @@ OrganizationalMetadataNotProvided = Al menos un creador necesita una unidad orga
 
 PublisherNameNotProvided = Se ha introducido informaci\u00F3n de publicaci\u00F3n sin un editor.
 
-PublisherNotProvided = Publisher must be provided
+PublisherNotProvided = Publisher must be provided.
 
-PublisherPlaceNotProvided = Publishing place must be provided
+PublisherPlaceNotProvided = Publishing place must be provided.
 
-PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook
+PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook.
 
-PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook
+PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
-PublishingDateNotProvided = At least one publishing date must be provided
+PublishingDateNotProvided = At least one publishing date must be provided.
+
+SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
 #
 # ReportWorkspace
