--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -159,17 +159,19 @@ PublisherNameNotProvided = \u51FA\u7248\u8005\u60C5\u5831\u304C\u5165\u529B\u305
 
 PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
-PublisherNotProvided = Publisher must be provided
+PublisherNotProvided = Publisher must be provided.
 
-PublisherPlaceNotProvided = Publishing place must be provided
+PublisherPlaceNotProvided = Publishing place must be provided.
 
-PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook
+PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook.
 
-PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook
+PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
-PublishingDateNotProvided = At least one publishing date must be provided
+PublishingDateNotProvided = At least one publishing date must be provided.
 
 ReportNoItemsFound = No publications found for the given institute and year.
+
+SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
 #
 # ReportWorkspace
