New validation message
Former-commit-id: 5d691fa9cc19ea9cd027ccb124aa5c00880d0abc

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -168,6 +168,8 @@ PublishingDateNotProvided = Es muss ein Erscheinungsdatum angegeben werden.
 
 SourceGenreMustBeProceedings = Das Genre der Quelle muss "Konferenzband" sein.
 
+SourceGenreMustBeSeries = Das Genre der Quelle muss "Reihe" sein.
+
 #
 # ReportWorkspace
 #
