--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -173,6 +173,8 @@ ReportNoItemsFound = No publications found for the given institute and year.
 
 SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
+SourceGenreMustBeSeries = Source genre must be "Series".
+
 #
 # ReportWorkspace
 #
