--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -174,6 +174,8 @@ PublishingDateNotProvided = At least one publishing date must be provided.
 
 SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
+SourceGenreMustBeSeries = Source genre must be "Series".
+
 #
 # ReportWorkspace
 #
