--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -149,6 +149,8 @@ PublishingDateNotProvided = At least one publishing date must be provided.
 
 SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
+SourceGenreMustBeSeries = Source genre must be "Series".
+
 #
 # ReportWorkspace
 #
