New validation message
Former-commit-id: 05513a744306f0d525676aff2d19a8cc7a539a73

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -160,9 +160,11 @@ PublisherNotProvided = Der Verlag muss angegeben werden.
 
 PublisherPlaceNotProvided = Der Verlagsort muss angegeben werden.
 
-PublishingDateNotCorrect1 = Mindestens ein Erscheinungsdatum muss das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect1 = Mindestens ein Erscheinungsdatum muss das Jahr des Jahrbuchs haben.
 
-PublishingDateNotCorrect2 = Jedes Erscheinungsdatum sollte das Jahr des Jahrbuchs haben
+DateAcceptedNotCorrect1 = Das Annahmedatum muss das Jahr des Jahrbuchs haben.
+
+PublishingDateNotCorrect2 = Jedes Erscheinungsdatum sollte das Jahr des Jahrbuchs haben.
 
 PublishingDateNotProvided = Es muss ein Erscheinungsdatum angegeben werden.
 
