--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -167,6 +167,8 @@ PublishingDateNotCorrect1 = At least one publishing date must have the year of t
 
 PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
+DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
+
 PublishingDateNotProvided = At least one publishing date must be provided.
 
 ReportNoItemsFound = No publications found for the given institute and year.
