PUBMAN-1888 fixed: Sharing: 500 Exception when moderator removes an audience group or re-saves existing audience group
Former-commit-id: f7613d97f0dd9b83a56aa119fc9b84ad817a2187

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -31,6 +31,10 @@ Affiliations_reloaded = ... Organisationsbaum wurde neu geladen.
 
 ArticleSourceNotProvided = Wenn das Genre "Zeitschriftenartikel" gew\u00E4hlt ist, muss die Quelle eine "Zeitschrift" sein.
 
+AudienceErrorAssigningGrant = Es ist ein Fehler beim Erstellen der Berechtigung aufgetreten.
+
+AudienceErrorRevokingGrant = Es ist ein Fehler beim Entfernen der Berechtigung aufgetreten. Bereits vergebene Berechtigungen d\u00FCrfen nur vom Berechtigungsersteller ver\u00E4ndert werden.
+
 AuthorNotProvided = Es muss mindestens ein Urheber vom Typ "Autor" eingegeben werden.
 
 ComponentContentCategoryNotProvided = Bei einer angeh\u00E4ngten Datei fehlt die Spezifizierung des Inhalts (z.B. Abstract, Pre-print, usw.).
@@ -70,6 +74,8 @@ CreatorNotProvided = Es muss mindestens ein Urheber eingegeben werden.
 CreatorOrganizationNameNotProvided = Ein Organisationsname muss noch angegeben werden.
 
 CreatorRoleNotProvided = Die Rolle des Urhebers muss angegeben werden.
+
+DateAcceptedNotCorrect1 = Das Annahmedatum muss das Jahr des Jahrbuchs haben.
 
 DateAcceptedNotProvided = Es muss ein Annahmedatum angegeben werden
 
@@ -162,15 +168,9 @@ PublisherPlaceNotProvided = Der Verlagsort muss angegeben werden.
 
 PublishingDateNotCorrect1 = Mindestens ein Erscheinungsdatum muss das Jahr des Jahrbuchs haben.
 
-DateAcceptedNotCorrect1 = Das Annahmedatum muss das Jahr des Jahrbuchs haben.
-
 PublishingDateNotCorrect2 = Jedes Erscheinungsdatum sollte das Jahr des Jahrbuchs haben.
 
 PublishingDateNotProvided = Es muss ein Erscheinungsdatum angegeben werden.
-
-SourceGenreMustBeProceedings = Das Genre der Quelle muss "Konferenzband" sein.
-
-SourceGenreMustBeSeries = Das Genre der Quelle muss "Reihe" sein.
 
 #
 # ReportWorkspace
@@ -198,6 +198,10 @@ SourceCreatorRoleInvalid = Der Urheber der Quelle muss entweder Autor oder Herau
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
 
 SourceEditionNotProvided = Die Ausgabe der Quelle muss angegeben werden.
+
+SourceGenreMustBeProceedings = Das Genre der Quelle muss "Konferenzband" sein.
+
+SourceGenreMustBeSeries = Das Genre der Quelle muss "Reihe" sein.
 
 SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
 
