--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -34,6 +34,10 @@ Affiliations_reloaded = ... affiliation tree was reloaded.
 
 ArticleSourceNotProvided = If genre is equal to "Journal Article" the source has to be "Journal".
 
+AudienceErrorAssigningGrant = An error occured while assigning the grant.
+
+AudienceErrorRevokingGrant = An error occured while revoking an grant. Assigned Grants can only be modified by the creator of the grant.
+
 AuthorNotProvided = A creator of type author has to be provided.
 
 ComponentContentCategoryNotProvided = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.).
@@ -73,6 +77,8 @@ CreatorNotProvided = At least one creator is required.
 CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = A creator's role is not provided.
+
+DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
 
 DateAcceptedNotProvided = Date accepted must be provided
 
@@ -170,13 +176,7 @@ PublishingDateNotCorrect1 = At least one publishing date must have the year of t
 
 PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
-DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
-
 PublishingDateNotProvided = At least one publishing date must be provided.
-
-SourceGenreMustBeProceedings = Source genre must be "Proceedings".
-
-SourceGenreMustBeSeries = Source genre must be "Series".
 
 #
 # ReportWorkspace
@@ -204,6 +204,10 @@ SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
 
 SourceEditionNotProvided = The edition of the source must be provided
+
+SourceGenreMustBeProceedings = Source genre must be "Proceedings".
+
+SourceGenreMustBeSeries = Source genre must be "Series".
 
 SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
 
