--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -34,6 +34,10 @@ Affiliations_reloaded = ... el \u00E1rbol de afiliaci\u00F3n se ha recargado.
 
 ArticleSourceNotProvided = If genre is equal to "Journal Article" the source has to be "Journal".
 
+AudienceErrorAssigningGrant = An error occured while assigning the grant.
+
+AudienceErrorRevokingGrant = An error occured while revoking an grant. Assigned Grants can only be modified by the creator of the grant.
+
 AuthorNotProvided = Tiene que proporcionar un creador en el tipo de autor.
 
 ComponentContentCategoryNotProvided = Falta definir un tipo de contenido para el fichero adjuntado (ej. Resumen, Pre-print, etc.)
@@ -71,6 +75,8 @@ CreatorNotProvided = Se requiere al menos un creador.
 CreatorOrganizationNameNotProvided = No se ha proporcionado un nombre de Organizaci\u00F3n.
 
 CreatorRoleNotProvided = No se ha proporcionado un rol de creador.
+
+DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
 
 DateAcceptedNotProvided = Date accepted must be provided
 
@@ -145,13 +151,7 @@ PublishingDateNotCorrect1 = At least one publishing date must have the year of t
 
 PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
-DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
-
 PublishingDateNotProvided = At least one publishing date must be provided.
-
-SourceGenreMustBeProceedings = Source genre must be "Proceedings".
-
-SourceGenreMustBeSeries = Source genre must be "Series".
 
 #
 # ReportWorkspace
@@ -177,6 +177,10 @@ SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 SourceCreatorRoleNotProvided = No se ha proporcionado el rol de creador de una fuente.
 
 SourceEditionNotProvided = The edition of the source must be provided
+
+SourceGenreMustBeProceedings = Source genre must be "Proceedings".
+
+SourceGenreMustBeSeries = Source genre must be "Series".
 
 SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe introducirse tambi\u00E9n un g\u00E9nero de fuente.
 
