--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -34,6 +34,10 @@ Affiliations_reloaded = ... \u7D44\u7E54\u56F3\u60C5\u5831\u3092\u518D\u8AAD\u30
 
 ArticleSourceNotProvided = If genre is equal to "Journal Article" the source has to be "Journal".
 
+AudienceErrorAssigningGrant = An error occured while assigning the grant.
+
+AudienceErrorRevokingGrant = An error occured while revoking an grant. Assigned Grants can only be modified by the creator of the grant.
+
 AuthorNotProvided = \u8457\u8005\u306E\u7A2E\u5225\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 ComponentContentCategoryNotProvided = \u767B\u9332\u30D5\u30A1\u30A4\u30EB\u306E\u5185\u5BB9\u7A2E\u5225\uFF08\u8981\u65E8\u3001\u30D7\u30EC\u30D7\u30EA\u30F3\u30C8\u306A\u3069\uFF09\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
@@ -73,6 +77,8 @@ CreatorNotProvided = \u5C11\u306A\u304F\u3068\u30821\u540D\u5206\u306F\u4F5C\u80
 CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = \u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+
+DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
 
 DateAcceptedNotProvided = Date accepted must be provided
 
@@ -167,15 +173,9 @@ PublishingDateNotCorrect1 = At least one publishing date must have the year of t
 
 PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook.
 
-DateAcceptedNotCorrect1 = Every acceptance date should have the year of the yearbook.
-
 PublishingDateNotProvided = At least one publishing date must be provided.
 
 ReportNoItemsFound = No publications found for the given institute and year.
-
-SourceGenreMustBeProceedings = Source genre must be "Proceedings".
-
-SourceGenreMustBeSeries = Source genre must be "Series".
 
 #
 # ReportWorkspace
@@ -201,6 +201,10 @@ SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
 SourceEditionNotProvided = The edition of the source must be provided
+
+SourceGenreMustBeProceedings = Source genre must be "Proceedings".
+
+SourceGenreMustBeSeries = Source genre must be "Series".
 
 SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
