PUBMAN-1888 fixed: Sharing: 500 Exception when moderator removes an audience group or re-saves existing audience group
Former-commit-id: d357080fed9f5942df98d98153706cc52f715f4f

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -35,6 +35,8 @@ AudienceErrorAssigningGrant = Es ist ein Fehler beim Erstellen der Berechtigung 
 
 AudienceErrorRevokingGrant = Es ist ein Fehler beim Entfernen der Berechtigung aufgetreten. Bereits vergebene Berechtigungen d\u00FCrfen nur vom Berechtigungsersteller ver\u00E4ndert werden.
 
+AudienceSuccessfullyChanged = Berechtigungen wurden erfolgreich ge\u00E4ndert/hinzugef\u00FCgt.
+
 AuthorNotProvided = Es muss mindestens ein Urheber vom Typ "Autor" eingegeben werden.
 
 ComponentContentCategoryNotProvided = Bei einer angeh\u00E4ngten Datei fehlt die Spezifizierung des Inhalts (z.B. Abstract, Pre-print, usw.).
