--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -38,6 +38,8 @@ AudienceErrorAssigningGrant = An error occured while assigning the grant.
 
 AudienceErrorRevokingGrant = An error occured while revoking an grant. Assigned Grants can only be modified by the creator of the grant.
 
+AudienceSuccessfullyChanged = Grants were successfully modified/added.
+
 AuthorNotProvided = A creator of type author has to be provided.
 
 ComponentContentCategoryNotProvided = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.).
