--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -38,6 +38,8 @@ AudienceErrorAssigningGrant = An error occured while assigning the grant.
 
 AudienceErrorRevokingGrant = An error occured while revoking an grant. Assigned Grants can only be modified by the creator of the grant.
 
+AudienceSuccessfullyChanged = Grants were successfully modified/added.
+
 AuthorNotProvided = Tiene que proporcionar un creador en el tipo de autor.
 
 ComponentContentCategoryNotProvided = Falta definir un tipo de contenido para el fichero adjuntado (ej. Resumen, Pre-print, etc.)
