New messages for validation
Former-commit-id: 4f37f8176b53acc3d12aad46c7d2416ace98c67d

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -199,11 +199,17 @@ SourceCreatorRoleInvalid = Der Urheber der Quelle muss entweder Autor oder Herau
 
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
 
+SourceCreatorNotProvided = Ein Urheber der Quelle muss angegeben werden.
+
 SourceEditionNotProvided = Die Ausgabe der Quelle muss angegeben werden.
 
 SourceGenreMustBeProceedings = Das Genre der Quelle muss "Konferenzband" sein.
 
+SourceGenreMustBeProceedingsOrJournal = Das Genre der Quelle muss "Konferenzband" oder "Zeitschrift" sein.
+
 SourceGenreMustBeSeries = Das Genre der Quelle muss "Reihe" sein.
+
+SourceGenreShouldBeJournal = Das Genre der Quelle sollte "Journal" sein.
 
 SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
 
