--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -205,11 +205,17 @@ SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
 
-SourceEditionNotProvided = The edition of the source must be provided
+SourceCreatorNotProvided = The creator of the source is not provided.
+
+SourceEditionNotProvided = The edition of the source must be provided.
 
 SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
+SourceGenreMustBeProceedingsOrJournal = Source genre must be "Proceedings" or "Journal".
+
 SourceGenreMustBeSeries = Source genre must be "Series".
+
+SourceGenreShouldBeJournal = Source genre should be "Journal".
 
 SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
 
