--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -178,11 +178,17 @@ SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = No se ha proporcionado el rol de creador de una fuente.
 
-SourceEditionNotProvided = The edition of the source must be provided
+SourceCreatorNotProvided = The creator of the source is not provided.
+
+SourceEditionNotProvided = The edition of the source must be provided.
 
 SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
+SourceGenreMustBeProceedingsOrJournal = Source genre must be "Proceedings" or "Journal".
+
 SourceGenreMustBeSeries = Source genre must be "Series".
+
+SourceGenreShouldBeJournal = Source genre should be "Journal".
 
 SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe introducirse tambi\u00E9n un g\u00E9nero de fuente.
 
