--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -202,11 +202,17 @@ SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-SourceEditionNotProvided = The edition of the source must be provided
+SourceCreatorNotProvided = The creator of the source is not provided.
+
+SourceEditionNotProvided = The edition of the source must be provided.
 
 SourceGenreMustBeProceedings = Source genre must be "Proceedings".
 
+SourceGenreMustBeProceedingsOrJournal = Source genre must be "Proceedings" or "Journal".
+
 SourceGenreMustBeSeries = Source genre must be "Series".
+
+SourceGenreShouldBeJournal = Source genre should be "Journal".
 
 SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
