Former-commit-id: 8a9d0ab41f7e3d68cdbb2f8f15fd25d05f622ede

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -193,13 +193,13 @@ SourceCreatorFamilyNameNotProvided = Der Nachname des Urhebers der Quelle muss a
 
 SourceCreatorGivennameNotProvided = Der Vorname des Urhebers der Quelle muss angeben werden.
 
+SourceCreatorNotProvided = Ein Urheber der Quelle muss angegeben werden.
+
 SourceCreatorOrganizationNameNotProvided = Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
 
 SourceCreatorRoleInvalid = Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
 
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
-
-SourceCreatorNotProvided = Ein Urheber der Quelle muss angegeben werden.
 
 SourceEditionNotProvided = Die Ausgabe der Quelle muss angegeben werden.
 
@@ -209,9 +209,11 @@ SourceGenreMustBeProceedingsOrJournal = Das Genre der Quelle muss "Konferenzband
 
 SourceGenreMustBeSeries = Das Genre der Quelle muss "Reihe" sein.
 
+SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
+
 SourceGenreShouldBeJournal = Das Genre der Quelle sollte "Journal" sein.
 
-SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
+SourceGenreShouldBeSeries = Das Genre der Quelle sollte "Reihe" sein.
 
 SourceNotProvided = Wenn das Genre "Zeitschriftenartikel", "Buchkapitel" oder "Konferenzbeitrag" gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
 
