--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -199,13 +199,13 @@ SourceCreatorFamilyNameNotProvided = The family name of the source creator must 
 
 SourceCreatorGivennameNotProvided = The given name of the source creator must be provided.
 
+SourceCreatorNotProvided = The creator of the source is not provided.
+
 SourceCreatorOrganizationNameNotProvided = The name of the source creator (organization) must be provided
 
 SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
-
-SourceCreatorNotProvided = The creator of the source is not provided.
 
 SourceEditionNotProvided = The edition of the source must be provided.
 
@@ -215,9 +215,11 @@ SourceGenreMustBeProceedingsOrJournal = Source genre must be "Proceedings" or "J
 
 SourceGenreMustBeSeries = Source genre must be "Series".
 
+SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
+
 SourceGenreShouldBeJournal = Source genre should be "Journal".
 
-SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
+SourceGenreShouldBeSeries = Source genre should be "Series".
 
 SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "Conference Paper" at least one source has to be provided.
 
