--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -172,13 +172,13 @@ SourceCreatorFamilyNameNotProvided = The family name of the source creator must 
 
 SourceCreatorGivennameNotProvided = The given name of the source creator must be provided.
 
+SourceCreatorNotProvided = The creator of the source is not provided.
+
 SourceCreatorOrganizationNameNotProvided = The name of the source creator (organization) must be provided
 
 SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = No se ha proporcionado el rol de creador de una fuente.
-
-SourceCreatorNotProvided = The creator of the source is not provided.
 
 SourceEditionNotProvided = The edition of the source must be provided.
 
@@ -188,9 +188,11 @@ SourceGenreMustBeProceedingsOrJournal = Source genre must be "Proceedings" or "J
 
 SourceGenreMustBeSeries = Source genre must be "Series".
 
+SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe introducirse tambi\u00E9n un g\u00E9nero de fuente.
+
 SourceGenreShouldBeJournal = Source genre should be "Journal".
 
-SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe introducirse tambi\u00E9n un g\u00E9nero de fuente.
+SourceGenreShouldBeSeries = Source genre should be "Series".
 
 SourceNotProvided = Si el g\u00E9nero es igual a "Art\u00EDculo de revista", "Cap\u00EDtulo de Libro" o "Presentaciones a Congresos" se debe proporcionar al menos una fuente.
 
