--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -196,13 +196,13 @@ SourceCreatorFamilyNameNotProvided = The family name of the source creator must 
 
 SourceCreatorGivennameNotProvided = The given name of the source creator must be provided.
 
+SourceCreatorNotProvided = The creator of the source is not provided.
+
 SourceCreatorOrganizationNameNotProvided = The name of the source creator (organization) must be provided
 
 SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
-
-SourceCreatorNotProvided = The creator of the source is not provided.
 
 SourceEditionNotProvided = The edition of the source must be provided.
 
@@ -212,9 +212,11 @@ SourceGenreMustBeProceedingsOrJournal = Source genre must be "Proceedings" or "J
 
 SourceGenreMustBeSeries = Source genre must be "Series".
 
+SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+
 SourceGenreShouldBeJournal = Source genre should be "Journal".
 
-SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+SourceGenreShouldBeSeries = Source genre should be "Series".
 
 SourceNotProvided = \u300C\u5B66\u8853\u96D1\u8A8C\u300D\u300C\u66F8\u7C4D\u300D\u300C\u4F1A\u8B70\u8AD6\u6587\u300D\u306E\u8CC7\u6599\u7A2E\u5225\u3067\u306F\u3001\u51FA\u7248\u7269\u60C5\u5831\u3092\u52A0\u3048\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
